# shedule_messenger

./: .env.sample  .gitignore  README.md  README.md~  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  urls.py~  views.py
blog/fixtures/: articles.json  articles.json~
blog/migrations/: 0001_initial.py  0002_alter_article_is_published_alter_article_view_count.py  0003_alter_article_is_published.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_detail.html~  article_form.html  article_list.html  article_list.html~
blog/templatetags/: blog_tags.py
config/: settings.py  settings.py~  urls.py
homepage/: services.py  urls.py  views.py  views.py~
homepage/templates/homepage/: index.html  index.html~
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  tasks.py  urls.py  views.py
mailing/fixtures/: mailings.json
mailing/management/commands/: send_mailing.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_options.py  0002_alter_mailingattempt_options_and_more.py  0003_alter_mailing_clients_alter_mailing_periodicity_and_more.py  0003_alter_mailing_options_alter_mailingattempt_options.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  (+9 more)
mailing/templatetags/: mailing_tags.py
static/js/: hide_messages.js
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py  views.py~
users/fixtures/: groups.json  users.json
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/: login.html
(+11 files in other folders)
