[tool.poetry]
name = "shedule- messenger"
version = "0.1.0"
description = ""
authors = ["Dimanskr <dimanskr2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
