[tool.poetry]
name = "shedule- messenger"
version = "0.1.0"
description = ""
authors = ["Dimanskr <dimanskr2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.7.0"
django-bootstrap5 = "^24.3"
pillow = "^11.0.0"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.47"
pytils = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
